--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<div class="header">
 			<div class="header-container">
 				<div class="hamburger-menu">
-					<img src="/img/hamburger.svg" alt="Hamburger-Menu">
+					<img src="img/hamburger.svg" alt="Hamburger-Menu">
 				</div>
-				<img src="/img/bank-logo.svg" alt="bank-logo" class="img">
+				<img src="img/bank-logo.svg" alt="bank-logo" class="img">
 
 				<ul class="nav-bar">
 					<li class="nav-links bank">БАНК</li>
